--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #0b5f8f;
   color: white;
 }
 
@@ -111,6 +111,10 @@ tr:nth-child(even) {
 
 #subject {
   padding: 10px;
+}
+
+#comment_submit_btn {
+  background-color: rgb(24, 103, 168);
 }
 
 .visually-hidden {
